View Issue Details

IDProjectCategoryView StatusLast Update
0023735Open CASCADEOCCT:Codingpublic2013-04-29 15:23
ReporterdbvAssigned Todbv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023735: Linkage error after patch 23663 on non-Windows platforms
DescriptionQADraw.cxx contains declaration of removed function ViewerMainLoop2d (lines 426-430) and calls it at line 509.
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0023663 closedaba Removing 2D viewer library 

Activities

dbv

2013-02-04 10:37

developer   ~0023245

Fix has been pushed to the git branch CR23735

Dear Sergey, please review.

san

2013-02-04 13:27

developer   ~0023251

Branch CR23735 reviewed without remarks, ready for testing.

mkv

2013-02-19 14:53

tester   ~0023387

Dear BugMaster,

Branch CR23735 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: dc4b5b35d58413745915f448efdcead71faa5919

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 39 (39 on master)

products component :
Linux: 9 (9 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 238867264 / 238745724
Total CPU difference: 9436.490000000176 / 10068.84999999991

Testing on Windows:
Total MEMORY difference: 315555800 / 315330000
Total CPU difference: 15531.53125 / 11890.4375

There are not serious differences in images found by testdiff.

Related Changesets

occt: master 4709515e

2013-02-22 10:22:35

dbv

Details Diff
0023735: Linkage error after patch 23663 on non-Windows platforms
Linkage error fix
Description fix
Affected Issues
0023735
mod - src/QADraw/QADraw.cxx Diff File

Issue History

Date Modified Username Field Change
2013-01-29 12:28 dbv New Issue
2013-01-29 12:28 dbv Assigned To => bugmaster
2013-01-29 12:29 dbv Relationship added related to 0023663
2013-02-04 10:35 dbv Assigned To bugmaster => dbv
2013-02-04 10:35 dbv Status new => assigned
2013-02-04 10:37 dbv Note Added: 0023245
2013-02-04 10:37 dbv Assigned To dbv => san
2013-02-04 10:37 dbv Status assigned => resolved
2013-02-04 13:27 san Note Added: 0023251
2013-02-04 13:27 san Assigned To san => bugmaster
2013-02-04 13:27 san Status resolved => reviewed
2013-02-06 10:05 bugmaster Assigned To bugmaster => mkv
2013-02-19 14:53 mkv Note Added: 0023387
2013-02-19 14:53 mkv Test case number => Not needed
2013-02-19 14:53 mkv Assigned To mkv => bugmaster
2013-02-19 14:53 mkv Status reviewed => tested
2013-02-26 10:00 dbv Changeset attached => occt master 4709515e
2013-02-26 10:00 dbv Assigned To bugmaster => dbv
2013-02-26 10:00 dbv Status tested => verified
2013-02-26 10:00 dbv Resolution open => fixed
2013-03-01 12:39 bugmaster Target Version => 6.6.0
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:23 aiv Fixed in Version => 6.6.0
2014-01-11 11:58 abv Category OCCT Release:BUILD => OCCT:Coding