0023735: Linkage error after patch 23663 on non-Windows platforms Linkage error fix Description fix